fixing wrapping issues

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -32,6 +32,10 @@ p {
     padding-bottom: 1rem;
 }
 
+span{
+  white-space: nowrap;
+}
+
 .splash-page .panel {
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
     font-weight: 600;
